--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
+    "chroma": "0.0.1",
+    "chroma-js": "^2.0.4",
+    "js": "^0.1.0",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
